# torncity_tools_bevy

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  clippy.toml
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.trae/skills/bevy-skill-0.18/: SKILL.md
assets/data/: torncity_items.csv
crates/bevy_clipboard/: Cargo.toml  README.md
crates/bevy_clipboard/src/: clipboard.rs  events.rs  lib.rs  systems.rs
crates/bevy_http/: Cargo.toml
crates/bevy_http/src/: lib.rs  tools.rs
crates/bevy_remote_image/: Cargo.toml
crates/bevy_remote_image/src/: lib.rs
crates/bevy_storage/: Cargo.toml  README.md
crates/bevy_storage/src/: app_config.rs  app_paths.rs  cache_store.rs  error.rs  file_store.rs  lib.rs  plugin.rs  storage.rs
crates/bevy_tab/: Cargo.toml
crates/bevy_tab/src/: lib.rs  tab.rs
crates/bevy_theme/: Cargo.toml  README.md  theme_preview.html
crates/bevy_theme/src/: component.rs  lib.rs  prelude.rs  resource.rs  systems.rs  theme.rs
crates/bevy_toast/: Cargo.toml  README.md
crates/bevy_toast/src/: components.rs  events.rs  lib.rs  plugin.rs  prelude.rs  resource.rs  style.rs
crates/bevy_toast/src/channel/: mod.rs
crates/bevy_toast/src/debug/: mod.rs
crates/bevy_toast/src/layout/: mod.rs
crates/bevy_toast/src/queue/: dedup.rs  mod.rs  strategy.rs
crates/bevy_toast/src/style/: animation.rs  mod.rs  theme.rs
crates/bevy_ui_fonts/: Cargo.toml
crates/bevy_ui_fonts/src/: lib.rs
crates/curl-parser/: Cargo.toml  README.md
crates/curl-parser/src/: ast.rs  error.rs  lib.rs  parser.rs  tokenizer.rs
docs/: ANDROID_SIGNING_GUIDE.md  CLAUDE_ARCHITECTURE.md  CLAUDE_DEV.md  CLAUDE_ECS.md
docs/ai/: bevy_ecs_guide.md  debug_guide.md  dev_guide.md
scripts/: build_android.sh  logcat_crash.sh  setup_android_signing.sh
src/: game.rs  lib.rs  main.rs
src/components/: browser.rs  button_click_effect.rs  mod.rs  number_stepper.rs  scroll.rs  theme_ext.rs  tick.rs  trader_card.rs
src/http/: favorites.rs
src/model/: error.rs  items.rs  mod.rs  user_log.rs
src/model/weav3r/: favorites.rs
src/resource/: items_data.rs  mod.rs
src/tools/: base.rs  mod.rs  order_change.rs  prelude.rs  time.rs
src/tools/order_change/: change.rs  error.rs  hash.rs  recovery.rs  result.rs  tests.rs
src/view/: home.rs  mod.rs  res.rs  setting.rs  trader_card_manager.rs
src/weav3r/: profit.rs
