[workspace]
members = ["crates/*", "crates/curl-parser"]

[workspace.dependencies]
bevy_tab = { path = "crates/bevy_tab" }
bevy_remote_image = { path = "crates/bevy_remote_image" }
bevy_http = { path = "crates/bevy_http" }
bevy_clipboard = { path = "crates/bevy_clipboard" }
bevy_storage = { path = "crates/bevy_storage" }
bevy_ui_fonts = { path = "crates/bevy_ui_fonts" }
bevy_theme = { path = "crates/bevy_theme" }
bevy_toast = { path = "crates/bevy_toast" }

bevy_ecs = { version = "0.18.1" }
bevy_app = { version = "0.18.1" }
bevy_asset = { version = "0.18.1" }
bevy_image = { version = "0.18.1" }
bevy_text = { version = "0.18.1" }
bevy_ui = { version = "0.18.1" }
bevy_log = { version = "0.18.1" }
bevy_tasks = { version = "0.18.1" }
bevy_ui_widgets = { version = "0.18.1" }
bevy_color = { version = "0.18.1" }
bevy_camera = { version = "0.18.1" }
bevy_state = { version = "0.18.1" }
bevy_reflect = { version = "0.18.1" }
bevy_feathers = { version = "0.18.1" }
bevy_kira_audio = { version = "0.25", features = ["android_shared_stdcxx"] }
bevy_time = { version = "0.18.1" }
bevy_picking = { version = "0.18.1" }

bevy_asset_loader = { version = "0.25.0" }

webbrowser = { version = "1.2", features = ["hardened"] }
ehttp = { version = "0.6.0", features = ["native-async"] }
base64 = { version = "0.22.1" }
sha2 = { version = "0.10.9" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
csv = { version = "1.3" }
crossbeam-channel = { version = "0.5" }
urlencoding = "2.1.3"
thiserror = { version = "2.0" }
# 剪贴板
arboard = "3.4"
log = { version = "0.4", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
# rand = { version = "1" }
winit = { version = "0.30", default-features = false }
image = { version = "0.25", default-features = false }
jni = "0.21"

[package]
name = "torn_trade"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
winresource = "0.1"

[features]
default = []
dev = ["bevy/debug"]

[target.'cfg(not(target_os = "android"))'.dependencies]
bevy = { version = "0.18.1", features = [
  "bevy_window",
  "bevy_asset",
  "experimental_bevy_feathers",
  "audio",
  "mp3",
] }
bevy_state.workspace = true
bevy_asset.workspace = true
bevy_ecs.workspace = true
bevy_reflect.workspace = true
bevy_ui_widgets.workspace = true
bevy_feathers.workspace = true

bevy_asset_loader.workspace = true

bevy_http.workspace = true
bevy_clipboard.workspace = true
bevy_storage.workspace = true
bevy_ui_fonts.workspace = true
bevy_tab.workspace = true
bevy_remote_image.workspace = true
bevy_theme.workspace = true
bevy_toast.workspace = true

thiserror.workspace = true
serde.workspace = true
csv.workspace = true
webbrowser.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
  "ui_api",
  "ui_bevy_render",
  "audio",
  "scene",
  "picking",
  "std",
  "android-native-activity",
  "android_shared_stdcxx",
  "default_font",
  "multi_threaded",
  "sysinfo_plugin",
  "bevy_asset",

  "experimental_bevy_feathers",
  "mp3",
] }

bevy_http.workspace = true
bevy_clipboard.workspace = true
bevy_storage.workspace = true
bevy_ui_fonts.workspace = true
bevy_tab.workspace = true
bevy_remote_image.workspace = true
bevy_theme.workspace = true
bevy_toast.workspace = true

bevy_state.workspace = true
bevy_asset.workspace = true
bevy_ecs.workspace = true
bevy_reflect.workspace = true
bevy_ui_widgets.workspace = true
bevy_feathers.workspace = true

bevy_asset_loader.workspace = true

wgpu = { version = "27", features = ["gles"] }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
csv.workspace = true
webbrowser.workspace = true
ndk-context = { version = "0.1.1" }
jni = { version = "0.21" }

[package.metadata.android]
package = "com.smth.torn_trade"
assets = "assets"
strip = "strip"
resources = "build/android/res"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.application]
icon = "@mipmap/icon"
label = "TornTrade"

# Android baseline permissions (keep minimal and add only when needed).
[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_NETWORK_STATE"

# Android 13+ media permissions (only needed when reading public media files).
[[package.metadata.android.uses_permission]]
name = "android.permission.READ_MEDIA_IMAGES"

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_MEDIA_VIDEO"

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_MEDIA_AUDIO"

# Backward compatibility for Android <= 12 when reading external storage.
[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"
max_sdk_version = 32

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 36

[target.'cfg(target_os = "android")'.profile.release]
opt-level = "z"
lto = true        # 开启链接时优化，减少函数调用开销
codegen-units = 1 # 提升优化粒度，牺牲编译速度换取性能
panic = 'abort'   # 禁用栈展开，减小二进制体积
