[package]
name = "bevy_remote_image"
version = "0.1.0"
edition = "2024"

[features]
default = ["disk-cache"]
disk-cache = []

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_log.workspace = true
bevy_tasks.workspace = true
bevy_asset.workspace = true
bevy_image.workspace = true
bevy_ui.workspace = true



ehttp.workspace = true
base64.workspace = true
sha2.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"
