[package]
name = "bevy_remote_image"
version = "0.1.0"
edition = "2024"

[features]
default = ["disk-cache"]
disk-cache = []

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_log.workspace = true
bevy_tasks.workspace = true
bevy_asset.workspace = true
bevy_image.workspace = true
bevy_ui.workspace = true



ehttp.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_storage.workspace = true
