[package]
name = "bevy_storage"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_log.workspace = true

serde.workspace = true
serde_json.workspace = true
base64.workspace = true
sha2.workspace = true
sysdirs = { version = "0.9", features = ["android-auto"] }
thiserror.workspace = true
