[package]
name = "bevy_toast"
version = "0.1.0"
edition = "2024"
description = "A toast notification plugin for Bevy"
license = "MIT"
repository = ""
keywords = ["bevy", "toast", "ui", "notification"]
categories = ["game-development", "ui"]

[dependencies]
bevy.workspace = true
serde.workspace = true
serde_json.workspace = true

uuid = { version = "1", features = ["v4"] }

[features]
default = []
dev = []

[dev-dependencies]
