[package]
name = "bevy_toast"
version = "0.1.0"
edition = "2024"
description = "A toast notification plugin for Bevy"
license = "MIT"
repository = ""
keywords = ["bevy", "toast", "ui", "notification"]
categories = ["game-development", "ui"]

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_ui.workspace = true
bevy_asset.workspace = true
bevy_reflect.workspace = true
bevy_ui_widgets.workspace = true
bevy_feathers.workspace = true
bevy_color.workspace = true
bevy_image.workspace = true
bevy_text.workspace = true
bevy_time.workspace = true

serde.workspace = true
serde_json.workspace = true
uuid = { version = "1", features = ["v4"] }

[features]
default = []
dev = []

[dev-dependencies]
